k8s/postgres-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rebumkdb
  labels:
    app: rebumkdb
    tier: database
spec:
  serviceName: rebumkdb
  selector:
    matchLabels:
      app: rebumkdb
  template:
    metadata:
      labels:
        app: rebumkdb
        tier: database
    spec:
      containers:
        - name: rebumkdb
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: rebumkdb
          volumeMounts:
            - name: postgres-pv
              mountPath: /var/lib/postgresql/data

            - mountPath: /docker-entrypoint-initdb.d
              name: postgresql-initdb
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pv

        - name: postgresql-initdb
          configMap:
            name: postgresql-initdb-config
