k8s/rebumk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebumkapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebumkapp
  template:
    metadata:
      labels:
        app: rebumkapp
    spec:
      containers:
        - name: rebumkapp
          image: meto8/rebumk-image:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: rebumk-storage
              mountPath: /app/data
      volumes:
        - name: rebumk-storage
          persistentVolumeClaim:
            claimName: postgres-pv
