k8s/rebumk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rebumk-service
spec:
  selector:
    app: rebumkapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
