k8s/rebumk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rebumk-ingress
spec:
  rules:
    - host: rebumk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rebumk-service
                port:
                  name: http
